styles/customer-capture-form.css
form {
  align-items: center;
  display: grid;
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  /* justify-items: end; */
}

label {
  grid-column: auto / span 1;
}

input,
select,
textarea {
  grid-column: auto / span 1;
}

form p {
  color: #666;
  grid-column: auto / span 2;
  font-size: 0.75rem;
}

/* Fields */
::-webkit-input-placeholder {
  /* WebKit, Blink, Edge */
  color: #aaa;
}

:-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: #aaa;
  opacity: 1;
}

::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: #aaa;
  opacity: 1;
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: #aaa;
}

::-ms-input-placeholder {
  /* Microsoft Edge */
  color: #aaa;
}

button,
input,
select {
  background-color: #fff;
  border: 1px solid #000;
  color: #000;
  font-size: 1rem;
  padding: 1rem;
  text-transform: uppercase;
  font-weight: normal;
}

input {
}

input[type="date"],
input[type="email"],
input[type="text"] {
}

button,
input[type="submit"] {
  padding: 1rem 2rem;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
  background-position: calc(100% - 1rem);
  background-repeat: no-repeat;
}

